--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,11 @@
 [tox]
-envlist=py26,py27,py33,py34,pypy
+envlist=py26,py27,py33,pypy
 
 [testenv]
 commands=py.test []
-deps=
-    pytest
-    mock
+deps=pytest
 
 [testenv:py26]
 deps=
     pytest
     unittest2
-    mock
